// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components: Slab DefaultSlab renders 1`] = `
<Fragment>
  <h2
    id="default-slab"
  >
    Default slab
  </h2>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="slab"
    >
      <p>
        Do you want to sign up for the slab mailing list?
      </p>
      <form
        action="#"
        data-validate={true}
        noValidate={true}
      >
        <div
          className="form-group"
        >
          <label
            htmlFor="validation-email-2"
          >
            Email
          </label>
          <div
            className="input-group"
          >
            <span
              className="input-group-addon"
            >
              <i
                className="material-icons"
              >
                email
              </i>
            </span>
            <input
              className="form-control"
              id="validation-email-2"
              placeholder="bob.corlsan@example.com"
              required={true}
              type="email"
            />
          </div>
          <div
            className="help-block"
            data-error="Wrong!"
            data-success="Right!"
          >
            This one might be a little tricky
          </div>
        </div>
        <button
          className="btn btn-executive"
          type="submit"
        >
          Submit
        </button>
      </form>
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Slab SlabColors renders 1`] = `
<Fragment>
  <h2
    id="slab-colors"
  >
    Slab colors
  </h2>
  <p>
    Both white and apricot variants of slab exist.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="slab slab-white"
    >
      <h4>
        Here is some text and then a striped item list
      </h4>
      <p>
        Some text with a small listing of items underneath.
      </p>
      <ul
        className="list item-list"
      >
        <li>
          Item 1
        </li>
        <li>
          Item 2
        </li>
        <li>
          Item 3
        </li>
      </ul>
    </div>
    <div
      className="slab slab-apricot"
    >
      <h4>
        Here is some text and then a striped item list
      </h4>
      <p>
        Some text with a small listing of items underneath.
      </p>
      <ul
        className="list item-list"
      >
        <li>
          Item 1
        </li>
        <li>
          Item 2
        </li>
        <li>
          Item 3
        </li>
      </ul>
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Slab SlabCombinations renders 1`] = `
<Fragment>
  <h2
    id="slab-combinations"
  >
    Slab combinations
  </h2>
  <p>
    You can mix and match slab variations as you see fit.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="slab slab-white slab-muted slab-elevated"
    >
      This is an elevated white slab with muted text.
    </div>
  </ComponentPreview>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="slab slab-well slab-lg"
    >
      This is a big well!
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Slab SlabElevated renders 1`] = `
<Fragment>
  <h2
    id="elevated-slab"
  >
    Elevated slab
  </h2>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="slab slab-elevated"
    >
      Look ma, im elevated!
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Slab SlabMuted renders 1`] = `
<Fragment>
  <h2
    id="slab-muted"
  >
    Slab muted
  </h2>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="slab slab-muted"
    >
      <h4>
        This text will be gray.
      </h4>
      

      <span>
        And this text will be gray.
      </span>
      

      Even this text will be gray!
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Slab SlabSizes renders 1`] = `
<Fragment>
  <h2
    id="slab-sizes"
  >
    Slab sizes
  </h2>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="slab slab-sm"
    >
      This is very snug.
    </div>
  </ComponentPreview>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="slab slab-lg"
    >
      This is so spacious I can hardly believe it!
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Slab SlabWell renders 1`] = `
<Fragment>
  <h2
    id="slab-well"
  >
    Slab well
  </h2>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="slab slab-well"
    >
      Look ma, im in a well!
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Slab renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    Slabs are container components, therefore it works with whatever you want to put in it.
  </p>
  <DefaultSlab />
  <SlabElevated />
  <SlabWell />
  <SlabArrow />
  <SlabColors />
  <SlabMuted />
  <SlabSizes />
  <SlabCombinations />
</DocContainer>
`;
